# acc

./: CMakeLists.txt
cmake/: config.cmake.in
examples/logger/: CMakeLists.txt  main.cpp
include/wrt/acc/: acc.hpp  shared_memory.hpp
src/: CMakeLists.txt  shared_memory.cpp
